add link to github repository, added swagger spec for all handlers,
